--- a/html/webscraper_python_hd_2/etl/index.html
+++ b/html/webscraper_python_hd_2/etl/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+﻿<!doctype html>
 <html lang="en">
 <head>
 <meta charset="utf-8">
@@ -24,14 +24,22 @@
 <section>
 <h2 class="section-title" id="header-submodules">Sub-modules</h2>
 <dl>
-<dt><code class="name"><a title="webscraper_python_hd_2.etl.books_database" href="books_database.html">webscraper_python_hd_2.etl.books_database</a></code></dt>
-<dd>
-<section class="desc"></section>
-</dd>
-<dt><code class="name"><a title="webscraper_python_hd_2.etl.webscraper_books" href="webscraper_books.html">webscraper_python_hd_2.etl.webscraper_books</a></code></dt>
-<dd>
-<section class="desc"></section>
-</dd>
+    <dt><code class="name"><a title="webscraper_python_hd_2.etl.books_database" href="books_database.html">webscraper_python_hd_2.etl.books_database</a></code></dt>
+    <dd>
+        <section class="desc"></section>
+    </dd>
+    <dt><code class="name"><a title="webscraper_python_hd_2.etl.webscraper_books" href="webscraper_books.html">webscraper_python_hd_2.etl.webscraper_books</a></code></dt>
+    <dd>
+        <section class="desc"></section>
+    </dd>
+    <dt><code class="name"><a title="webscraper_python_hd_2.etl.coordinator" href="coordinator.html">webscraper_python_hd_2.etl.coordinator</a></code></dt>
+    <dd>
+        <section class="desc"></section>
+    </dd>
+    <dt><code class="name"><a title="webscraper_python_hd_2.etl.utils" href="utils.html">webscraper_python_hd_2.etl.utils</a></code></dt>
+    <dd>
+        <section class="desc"></section>
+    </dd>
 </dl>
 </section>
 <section>
@@ -56,6 +64,8 @@
 <ul>
 <li><code><a title="webscraper_python_hd_2.etl.books_database" href="books_database.html">webscraper_python_hd_2.etl.books_database</a></code></li>
 <li><code><a title="webscraper_python_hd_2.etl.webscraper_books" href="webscraper_books.html">webscraper_python_hd_2.etl.webscraper_books</a></code></li>
+<li><code><a title="webscraper_python_hd_2.etl.coordinator" href="v.html">webscraper_python_hd_2.etl.coordinator</a></code></li>
+<li><code><a title="webscraper_python_hd_2.etl.utils" href="utils.html">webscraper_python_hd_2.etl.utils</a></code></li>
 </ul>
 </li>
 </ul>
